a11y - fixing offscreen class to remove visibility:hidden since that defeats the purpose

--- a/base.css
+++ b/base.css
@@ -72,7 +72,6 @@ p {
 }
 
 .offscreen {
-    visibility: hidden;
     opacity: 0;
     width: 0;
     height: 0;
